--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,26 @@
 language: python
 python: 2.7
 
+env:
+  globals:
+    - OPENERP_SERVER=${TRAVIS_BUILD_DIR}/tests/config/odoo-travis.cfg
+
+services:
+  - postgresql
+
+virtualenv:
+  # needed for lxml, lxml installed with pip in the virtualenv gives an
+  # error on travis
+  system_site_packages: true
+
+addons:
+  postgresql: "9.4"
+  apt:
+    packages:
+      - python-lxml # because pip installation is slow
+
 install:
-  - pip install flake8
-  - pip install .
+  - pip install flake8 invoke tox
 
 script:
-  - flake8
-  - py.test
+  - tox
