--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python: 2.7
 
 env:
   globals:
-    - OPENERP_SERVER=${TRAVIS_BUILD_DIR}/tests/config/odoo-travis.cfg
+    - SOURCE_CONFIG_FILE=${TRAVIS_BUILD_DIR}/tests/config/odoo-travis.cfg
 
 services:
   - postgresql
