--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 9.0,10.0,lint
+envlist = 9.0,10.0,11.0,lint
 
 [testenv:9.0]
 passenv = OPENERP_SERVER
@@ -17,6 +17,22 @@ commands =
     py.test {posargs}
 
 [testenv:10.0]
+passenv = OPENERP_SERVER
+setenv =
+    OPENERP_SERVER = /tmp/test-anthem-config-{envname}.cfg
+    SOURCE_CONFIG_FILE = {env:SOURCE_CONFIG_FILE:tests/config/odoo.cfg}
+deps =
+    pytest
+    invoke
+whitelist_externals = echo
+commands =
+    invoke tests.prepare --version={envname}
+    invoke tests.prepare_config --version={envname} --source={env:SOURCE_CONFIG_FILE} --target={env:OPENERP_SERVER}
+    invoke tests.createdb --version={envname}
+    py.test {posargs}
+
+[testenv:11.0]
+basepython = python3.5
 passenv = OPENERP_SERVER
 setenv =
     OPENERP_SERVER = /tmp/test-anthem-config-{envname}.cfg
