--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 language: python
-python: 2.7
+python:
+  - 2.7
+  - 3.6
 
 env:
-  globals:
-    - SOURCE_CONFIG_FILE=${TRAVIS_BUILD_DIR}/tests/config/odoo-travis.cfg
+  - ODOOVERSION=9.0
+  - ODOOVERSION=10.0
+
+matrix:
+  exclude:
+  - python: 3.6
+    env: ODOOVERSION=9.0
+  - python: 3.6
+    env: ODOOVERSION=10.0
 
 services:
   - postgresql
@@ -14,13 +23,20 @@ virtualenv:
   system_site_packages: true
 
 addons:
-  postgresql: "9.4"
+  postgresql: "9.6"
   apt:
     packages:
       - python-lxml # because pip installation is slow
 
 install:
-  - pip install flake8 invoke tox
+  - pip install flake8 invoke
+
+before_script:
+  - virtualenv /tmp/venv-${ODOOVERSION}
+  - source /tmp/venv-${ODOOVERSION}/bin/activate
+  - pip install invoke flake8 pytest
+  - pip install .
+  - invoke tests.prepare-version "${ODOOVERSION}"
 
 script:
-  - tox
+  - OPENERP_SERVER=/tmp/test-anthem-config-${ODOOVERSION}.cfg py.test tests
