--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
   - ODOOVERSION=9.0 LINT=false
   - ODOOVERSION=10.0 LINT=false
   - ODOOVERSION=11.0 LINT=false
+  - ODOOVERSION=12.0 LINT=false
+  - ODOOVERSION=13.0 LINT=false
 
 matrix:
   exclude:
@@ -16,6 +18,10 @@ matrix:
     env: ODOOVERSION=10.0 LINT=false
   - python: 2.7
     env: ODOOVERSION=11.0 LINT=false
+  - python: 2.7
+    env: ODOOVERSION=12.0 LINT=false
+  - python: 2.7
+    env: ODOOVERSION=13.0 LINT=false
   include:
   - python: 3.6
     env: LINT=true
