--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ env:
   - ODOOVERSION=11.0 LINT=false
   - ODOOVERSION=12.0 LINT=false
   - ODOOVERSION=13.0 LINT=false
+  - ODOOVERSION=14.0 LINT=false
+  - ODOOVERSION=15.0 LINT=false
 
 matrix:
   exclude:
@@ -22,6 +24,10 @@ matrix:
       env: ODOOVERSION=12.0 LINT=false
     - python: 2.7
       env: ODOOVERSION=13.0 LINT=false
+    - python: 2.7
+      env: ODOOVERSION=14.0 LINT=false
+    - python: 2.7
+      env: ODOOVERSION=15.0 LINT=false
   include:
     - python: 3.6
       env: LINT=true
