--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ addons:
       - python-lxml # because pip installation is slow
 
 before_script:
-  - if [ "$LINT" == false ] ; then pip install invoke pytest ; fi
+  - if [ "$LINT" == false ] ; then pip install invoke pytest "setuptools<58" ; fi
   - if [ "$LINT" == false ] ; then pip install . ; fi
   - if [ "$LINT" == false ] ; then invoke tests.prepare-version "${ODOOVERSION}" ; fi
   - if [ "$LINT" == true ] ; then pip install flake8 readme_renderer ; fi
