--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,42 @@
 language: python
 python:
-  - 2.7
   - 3.6
   - 3.7
+  - 3.10-dev
 
 env:
-  - ODOOVERSION=9.0 LINT=false
-  - ODOOVERSION=10.0 LINT=false
-  - ODOOVERSION=11.0 LINT=false
   - ODOOVERSION=12.0 LINT=false
   - ODOOVERSION=13.0 LINT=false
   - ODOOVERSION=14.0 LINT=false
   - ODOOVERSION=15.0 LINT=false
+  - ODOOVERSION=16.0 LINT=false
 
 matrix:
   exclude:
-    - python: 3.6
-      env: ODOOVERSION=9.0 LINT=false
-    - python: 3.7
-      env: ODOOVERSION=9.0 LINT=false
-    - python: 3.6
-      env: ODOOVERSION=10.0 LINT=false
-    - python: 3.7
-      env: ODOOVERSION=10.0 LINT=false
-    - python: 2.7
+    - python: 3.10-dev
       env: ODOOVERSION=11.0 LINT=false
-    - python: 2.7
+    - python: 3.7
+      env: ODOOVERSION=11.0 LINT=false
+    - python: 3.10-dev
       env: ODOOVERSION=12.0 LINT=false
-    - python: 2.7
+    - python: 3.7
+      env: ODOOVERSION=12.0 LINT=false
+    - python: 3.10-dev
       env: ODOOVERSION=13.0 LINT=false
-    - python: 2.7
+    - python: 3.7
+      env: ODOOVERSION=13.0 LINT=false
+    - python: 3.10-dev
       env: ODOOVERSION=14.0 LINT=false
-    - python: 2.7
+    - python: 3.7
+      env: ODOOVERSION=14.0 LINT=false
+    - python: 3.10-dev
       env: ODOOVERSION=15.0 LINT=false
     - python: 3.6
       env: ODOOVERSION=15.0 LINT=false
+    - python: 3.10-dev
+      env: ODOOVERSION=16.0 LINT=false
+    - python: 3.6
+      env: ODOOVERSION=16.0 LINT=false
   include:
     - python: 3.7
       env: LINT=true
@@ -58,7 +60,6 @@ script:
   - if [ "$LINT" == false ] ; then
     OPENERP_SERVER=/tmp/test-anthem-config-${ODOOVERSION}.cfg py.test tests ; fi
   - if [ "$LINT" == true ] ; then flake8 anthem tests ; fi
-  - if [ "$LINT" == true ] ; then python setup.py check -r -s ; fi
 
 deploy:
   provider: pypi
